@@ -9,6 +9,9 @@ MASTER_ARCHIVE = test-masters.tar.gz
 xsdtest.exe : xsdtest.cs $(TESTS)
 	$(MCS_RUNTIME) $(MCS) xsdtest.cs
 
+xs-psci-compare.exe : xs-psci-compare.cs
+	$(MCS_RUNTIME) $(MCS) xs-psci-compare.cs
+
 $(MASTERS) : $(MASTER_ARCHIVE) xsd-test-suite
 	cd xsd-test-suite; tar zxvf ../$(MASTER_ARCHIVE); cd ..
 
@@ -21,8 +24,11 @@ $(TEST_ARCHIVE) :
 xsd-test-suite:
 	mkdir xsd-test-suite
 
-test :
+test : xsdtest.exe
 	$(RUNTIME) xsdtest.exe
+
+test-psci : xs-psci-compare.exe
+	$(RUNTIME) xs-psci-compare.exe xsd-test-suite/msxsdtest/tests-all.xml > psci-mono-msxsd.txt
 
 # be careful to use it. This removes ALL files in xsd-test-suite!
 # clean:
