@@ -1,5 +1,7 @@
+* System.Xml.Schema standalone test collections
 
-Small XML Schema test system::
+
+** Small XML Schema validation test system::
 
 This is a small standalone test system using W3C XML Schema test collection.
 http://www.w3.org/2001/05/xmlschema-test-collection.html
@@ -9,5 +11,31 @@ compiling test runner).
 
 "make test" will do the actual tests.
 
-Atsushi Eno <atsushi@ximian.com>
 
+** Post Schema Compilation Information comparison test::
+
+This is a test for Post Schema Compilation Information properties.
+
+xs-pcsi-compare.exe emits properties of schema object model. pcsi-ms-all.zip contains msxsdtest result I got from MS.NET 1.1.
+
+(Currently no other way to compare the results by hands.)
+
+As for the result differences, some notes would be required:
+
+	- MS.NET holds incorrect base schema type for simple list and union
+	  types. Their base type is simple ur-type (3.14.7) but MS.NET holds
+	  item type(s) there.
+
+	- For unspecified types for element and attribute, they incorrectly
+	  specifies xs:string type. However in those cases, attribute types
+	  should be mapped to simple ur-type and element types should be
+	  (complex) ur-type (3.4.7)
+
+This will be added in the future (currently Mono has the same problem).
+
+	- MS.NET does not remove "pointless" choice particle (see 3.9.6).
+	  However it results in incorrect validation.
+	  (e.g. msxsdtest/Particles/particlesHb010.xsd)
+
+
+Atsushi Eno <atsushi@ximian.com>
