@@ -1,3 +1,11 @@
+2004-01-20  Atsushi Enomoto  <atsushi@ximian.com>
+
+	* Added set of Post Schema Compilation Information tests, i.e.
+	  xs-psci-compare.cs and psci-ms-all.zip.
+	* Makefile: Added test-psci target.
+	* README: Added notes on PSCI tests (however it is not for today's
+	  implementation, but for the very near future with bunch of fixes)
+
 2004-01-08  Atsushi Enomoto  <atsushi@ximian.com>
 
 	* xsdtest.cs : XmlReaders should be closed in case of errors.
